--- a/assets/js/turn.html
+++ b/assets/js/turn.html
@@ -1,5 +1,10 @@
 <section>
     <div class="current">
-        <img ng-src="/image/{{state.boardid}}"/>
+        <img ng-src="/image/{{ state.boardid }}"/>
+    </div>
+    <div class="next">
+        <a ng-href="/{{ move.id }}" ng-repeat="move in state.moves">
+            <img ng-src="/image/{{ move.id }}?width=100&height=100"/>
+        </a>
     </div>
 </section>
